--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder",
+    "build": "electron-builder --win portable",
     "dist": "electron-builder --publish=never"
   },
-  "author": "Your Name",
+  "author": "Hank",
   "license": "MIT",
   "build": {
     "appId": "com.example.price-display",
@@ -22,8 +22,13 @@
       "display.html"
     ],
     "win": {
-      "target": "nsis",
-      "icon": "icon.ico"
+      "target": [{
+        "target": "portable",
+        "arch": [
+          "x64",
+          "ia32"
+        ]
+      }]
     },
     "mac": {
       "target": "dmg",
